doc/kubo/yml/ingress/gs-spring-boot-docker2-deployment.yaml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: gs-spring-boot-docker-deployment2
  labels:
    app: gs-spring-boot-docker2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gs-spring-boot-docker2
  template:
    metadata:
      labels:
        app: gs-spring-boot-docker2
    spec:
      containers:
      - name: gs-spring-boot-docker2
        image: springio/gs-spring-boot-docker  
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "800m"
