doc/kubo/yml/ingress/gs-spring-boot-docker-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
  - http:
      paths:
      - path: /svc1/*
        backend:
          serviceName: gs-spring-boot-docker-svc1
          servicePort: 80
      - path: /svc2/*
        backend:
          serviceName: gs-spring-boot-docker-svc1
          servicePort: 80
