doc/kubo/yml/ingress/ingress-tls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tls
spec:
  tls:
  - secretName: hello-ingress-secret
  rules:
  - http:
      paths:
      - path: /svc1/*
        backend:
          serviceName: gs-spring-boot-docker-svc1
          servicePort: 80
      - path: /svc2/*
        backend:
          serviceName: gs-spring-boot-docker-svc2
          servicePort: 80
